# ERM

./: .clang-format  .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  cl-fmt.sh  setup.sh  sonar-project.properties
Modules/: CMakeLists.txt  README.md
Modules/Assets/: CMakeLists.txt
Modules/Assets/Sources/common/erm/assets/: AssetsRepo.h  Assets_Module.cpp  Assets_Module.h
Modules/Audio/: CMakeLists.txt
Modules/Audio/Sources/common/erm/audio/: Reproduction.cpp
Modules/Audio/Sources/erm/audio/: AudioDriver.h  AudioUtils.h
Modules/ECS/: CMakeLists.txt
Modules/ECS/Sources/common/erm/ecs/: Component.h  ECS.h  ECSConfig.h  ECSUtils.h  ISystem.h
Modules/Editor/: CMakeLists.txt
Modules/Editor/Sources/OpenGl/erm/editor/: ImGuiHandle.h
Modules/Editor/Sources/common/erm/editor/: ImGuiAnimationComponentWrapper.cpp  ImGuiGameWindow.h  ImGuiInfoWrapper.cpp  ImGuiMainMenuBarWrapper.cpp  ImGuiMeshWrapper.cpp  ImGuiMeshWrapper.h  ImGuiSkeletonComponentWrapper.cpp  ImGuiTransformComponentWrapper.cpp  ImGuiUtils.cpp
Modules/Engine/: CMakeLists.txt
Modules/Engine/Sources/Vulkan/erm/debug/: ImGuiHandle.cpp  ImGuiHandle.h
Modules/Engine/Sources/Vulkan/erm/extensions/: VkExtensions.cpp
Modules/Engine/Sources/Vulkan/erm/ray_tracing/: RTBlas.cpp  RTBlas.h  RTPipelineResources.cpp  RTPipelineResources.h  RTRenderData.h  RTRenderingResources.cpp
Modules/Engine/Sources/Vulkan/erm/rendering/: Device.cpp  Device.h
Modules/Engine/Sources/Vulkan/erm/utils/: VkUtils.cpp  VkUtils.h
Modules/Engine/Sources/common/erm/audio/: AudioManager.cpp  AudioUtils.h
Modules/Engine/Sources/common/erm/debug/: ImGuiCameraComponentWrapper.cpp  ImGuiComponentWrapper.cpp  ImGuiComponentWrapper.h  ImGuiEntitiesWrapper.cpp  ImGuiEntityWrapper.h  ImGuiGameWindow.cpp  ImGuiInfoWrapper.cpp  ImGuiMainMenuBarWrapper.cpp  ImGuiMaterialWrapper.cpp  ImGuiMeshWrapper.cpp  ImGuiModelComponentWrapper.cpp  ImGuiUtils.h  (+1 more)
Modules/Input/: CMakeLists.txt
Modules/Main/: CMakeLists.txt
Modules/Math/: CMakeLists.txt
Modules/Rendering/: CMakeLists.txt
Modules/Resources/: CMakeLists.txt
Modules/Utils/: CMakeLists.txt
Modules/Utils/Sources/erm/utils/: Macros.h
Modules/Window/: CMakeLists.txt
libs/: CMakeLists.txt  README.md
libs/ERM_ArgsParser/: CMakeLists.txt  README.md
libs/ERM_Assets/: CMakeLists.txt
libs/ERM_Audio/: CMakeLists.txt
libs/ERM_ECS/: CMakeLists.txt
libs/ERM_ECS/NN_Data/common/erm/: NNData.nn
libs/ERM_Editor/: CMakeLists.txt
libs/ERM_Engine/: CMakeLists.txt
libs/ERM_FileSystem/: CMakeLists.txt
libs/ERM_FileSystem/Sources/common/erm/: fs.cpp
libs/ERM_Input/: CMakeLists.txt
libs/ERM_Log/: CMakeLists.txt
libs/ERM_Main/: CMakeLists.txt
libs/ERM_Main/Sources/common/erm/: main.cpp
libs/ERM_Math/: CMakeLists.txt
libs/ERM_NN/: CMakeLists.txt
libs/ERM_Rendering/: CMakeLists.txt
libs/ERM_Setup/: CMakeLists.txt
libs/ERM_System/: CMakeLists.txt
libs/ERM_Utils/: CMakeLists.txt
libs/ERM_Window/: CMakeLists.txt
libs/Editor/: CMakeLists.txt
libs/Engine/: CMakeLists.txt
libs/Input/: CMakeLists.txt
libs/Main/: CMakeLists.txt
libs/Main/Sources/common/erm/: main.cpp
libs/Math/: CMakeLists.txt
libs/Rendering/: CMakeLists.txt
libs/Utils/: CMakeLists.txt
libs/cmake/: ERMLibs.cmake  ERMLibsUtils.cmake
modules/: CMakeLists.txt  README.md
modules/ERM_ArgsParser/: CMakeLists.txt
modules/ERM_ArgsParser/Sources/common/erm/: ERM_ArgsParser.cpp
modules/ERM_Assets/: CMakeLists.txt
modules/ERM_Assets/Sources/common/erm/: ERM_Assets.cpp  ERM_AssetsImpl.cpp  ERM_AssetsImpl.h
modules/ERM_Audio/: CMakeLists.txt
modules/ERM_Audio/Sources/common/erm/: ERM_Audio.cpp  ERM_AudioImpl.cpp  ERM_AudioImpl.h
modules/ERM_ECS/: CMakeLists.txt
modules/ERM_ECS/Sources/common/erm/: ERM_ECS.cpp  ERM_ECSImpl.cpp  ERM_ECSImpl.h
modules/ERM_Editor/: CMakeLists.txt
modules/ERM_Editor/Sources/common/erm/: ERM_Editor.cpp  ERM_EditorImpl.cpp  ERM_EditorImpl.h
modules/ERM_Engine/: CMakeLists.txt
modules/ERM_Engine/Sources/common/erm/: ERM_Engine.cpp  ERM_EngineImpl.cpp  ERM_EngineImpl.h
modules/ERM_FileSystem/: CMakeLists.txt
modules/ERM_FileSystem/Sources/common/erm/: ERM_FileSystem.cpp  ERM_FileSystemImpl.cpp  ERM_FileSystemImpl.h
modules/ERM_Input/: CMakeLists.txt
modules/ERM_Input/Sources/common/erm/: ERM_Input.cpp
modules/ERM_Log/: CMakeLists.txt
modules/ERM_Log/Sources/common/erm/: ERM_Log.cpp
modules/ERM_Main/: CMakeLists.txt
modules/ERM_Math/: CMakeLists.txt
modules/ERM_Math/Sources/common/erm/: ERM_Math.cpp
modules/ERM_Modules/: CMakeLists.txt
modules/ERM_Modules/Templates/: AllModules.h.in  ERM_Module.h  dummy_main.cpp  dummy_main.cpp.in  module_main.cpp
modules/ERM_Modules/cmake/: ModulesPostSetupCallback.cmake  ModulesPreGenerateCallback.cmake
modules/ERM_ModulesLib/: CMakeLists.txt
modules/ERM_ModulesLib/Templates/: AllModules.h  ERM_Module.h  ERM_ModuleExecutable.h  ERM_ModuleStandalone.h  module_main.cpp
modules/ERM_ModulesLib/cmake/: ModulesLibPostSetupCallback.cmake  ModulesLibPreGenerateCallback.cmake
modules/ERM_NN/: CMakeLists.txt
modules/ERM_NN/Sources/common/erm/: ERM_NN.cpp  ERM_NNImpl.cpp  ERM_NNImpl.h
modules/ERM_NN/Templates/: NNAllStatementHandlers.h.in
modules/ERM_NN/cmake/: NNPostSetupCallback.cmake
modules/ERM_Rendering/: CMakeLists.txt
modules/ERM_Rendering/Sources/common/erm/: ERM_Rendering.cpp  ERM_RenderingImpl.cpp  ERM_RenderingImpl.h
modules/ERM_STL/: CMakeLists.txt
modules/ERM_Setup/: CMakeLists.txt
modules/ERM_Setup/Sources/common/erm/: ERM_Setup.cpp  ERM_SetupImpl.cpp  ERM_SetupImpl.h
modules/ERM_System/: CMakeLists.txt
modules/ERM_System/Sources/common/erm/: ERM_System.cpp  ERM_SystemImpl.cpp  ERM_SystemImpl.h
modules/ERM_TypeID/: CMakeLists.txt
modules/ERM_Utils/: CMakeLists.txt
modules/ERM_Utils/Sources/common/erm/: ERM_Utils.cpp
modules/ERM_Window/: CMakeLists.txt
modules/ERM_Window/Sources/common/erm/: ERM_Window.cpp  ERM_WindowImpl.cpp  ERM_WindowImpl.h
modules/cmake/: ERMModules.cmake  ERMModulesConfig.cmake  ERMModulesUtils.cmake
(+1953 files in other folders)
