cmake_minimum_required(VERSION 3.31)

# Project declaration
project(
	"ERM"
	VERSION 0.0.1
	DESCRIPTION "C++ Game Engine"
	LANGUAGES CXX
)

# Custom properties
set(ERM_ROOT_DIR "${CMAKE_CURRENT_SOURCE_DIR}" CACHE PATH "" FORCE)
set(ERM_RES_SOURCE "${ERM_ROOT_DIR}/res" CACHE PATH "" FORCE)
set(ERM_RES_DEST "${CMAKE_BINARY_DIR}/ERM/res" CACHE PATH "" FORCE)
set(ERM_GENERATED_DIR "${CMAKE_BINARY_DIR}/ERM/generated" CACHE PATH "" FORCE)

# CMake options
set(CMAKE_EXPORT_COMPILE_COMMANDS ON CACHE BOOL "" FORCE)
set(CMAKE_WINDOWS_EXPORT_ALL_SYMBOLS ON CACHE BOOL "" FORCE)

# Install options
set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/ERM/lib/$<CONFIG>" CACHE PATH "" FORCE)
set(CMAKE_LIBRARY_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/ERM/lib/$<CONFIG>" CACHE PATH "" FORCE)
set(CMAKE_RUNTIME_OUTPUT_DIRECTORY "${CMAKE_BINARY_DIR}/ERM/bin/$<CONFIG>" CACHE PATH "" FORCE)
set(CMAKE_INSTALL_PREFIX "${CMAKE_CURRENT_SOURCE_DIR}/erm" CACHE PATH "" FORCE)

# C++ Options
set(CMAKE_CXX_STANDARD 23 CACHE STRING "" FORCE)
set(CMAKE_CXX_EXTENSIONS OFF CACHE BOOL "" FORCE)
set(CMAKE_CXX_STANDARD_REQUIRED ON CACHE BOOL "" FORCE)
set(CMAKE_CXX_SCAN_FOR_MODULES OFF CACHE BOOL "" FORCE)
set(CMAKE_CXX_FLAGS "" CACHE STRING "" FORCE)
set(CMAKE_CXX_FLAGS_DEBUG "" CACHE STRING "" FORCE)
set(CMAKE_CXX_FLAGS_RELEASE "" CACHE STRING "" FORCE)
set(CMAKE_EXE_LINKER_FLAGS "" CACHE STRING "" FORCE)
set(CMAKE_EXE_LINKER_FLAGS_DEBUG "" CACHE STRING "" FORCE)
set(CMAKE_EXE_LINKER_FLAGS_RELEASE "" CACHE STRING "" FORCE)

# Update cmake module path
list(APPEND CMAKE_MODULE_PATH "${CMAKE_CURRENT_SOURCE_DIR}/cmake")

# Setup ERM_HOST_PLATFORM
include(ERMHostPlatform)

# Setup ERM_CMAKE_GENERATOR
include(ERMGenerator)

# Setup ERM_RENDERING_API
include(ERMRenderingAPI)

# Setup compiler
include(ERMCompiler)

# Common includes
include(ERMConfig)
include(ERMUtils)

# Setup Python
find_package(Python3 REQUIRED)

# Setup pipeline script
erm_setup_pipeline_script()

# Setup externals
set(ERM_EXTERNALS_DIR "${ERM_ROOT_DIR}/externals")
add_subdirectory("${ERM_EXTERNALS_DIR}")

# Setup ERM modules
set(ERM_MODULES_DIR "${ERM_ROOT_DIR}/modules")
add_subdirectory("${ERM_MODULES_DIR}")
