erm_library_project(0.0.1 "ERM Rendering lib")

if(ERM_RENDERING_API_INCLUDE_DIR)
	target_sources(
		"${PROJECT_NAME}"
		PUBLIC
			FILE_SET HEADERS
			BASE_DIRS "${ERM_RENDERING_API_INCLUDE_DIR}"
	)
endif()

target_compile_definitions(
	"${PROJECT_NAME}"
	PRIVATE
		ERM_ZONE_COLOR=0x111100
		$<$<BOOL:${ERM_VULKAN}>:GLM_FORCE_DEPTH_ZERO_TO_ONE>
		$<$<BOOL:${ERM_VULKAN}>:ERM_SHADERS_COMPILER="${ERM_SHADERS_COMPILER}">
		$<$<BOOL:${ERM_FLIP_PROJECTION}>:ERM_FLIP_PROJECTION>
		$<$<BOOL:${ERM_FLIP_VIEWPORT}>:ERM_FLIP_VIEWPORT>
	PUBLIC
		$<$<BOOL:${ERM_VULKAN}>:VULKAN_HPP_NO_EXCEPTIONS>
		SPIRV_CROSS_EXCEPTIONS_TO_ASSERTIONS
)

target_link_libraries(
	"${PROJECT_NAME}"
	PRIVATE
		imgui
		ERM_Window
	PUBLIC
		${ERM_RENDERING_API_LIB}
		spirv-cross-cpp
		ERM_Input
		ERM_Utils
		ERM_Assets
)
